# haskell-terminal-demo

./: README.md  haskell-terminal-demo.cabal
app/: Main.hs
src/: Game.hs  MathExpr.hs  MyLib.hs  Parser.hs  ParserTest.hs  Result.hs
